End First Session

--- a/Tagebuch/2024-09-27.md
+++ b/Tagebuch/2024-09-27.md
@@ -5,4 +5,4 @@ In einer Taverne in Dolchfurt ist die Gruppe am Trinken wenn ein stämmiger Mann
 Am Morgen hat sich die Gruppe bei den verschiedensten Händlern vorbereitet bevor sie Richtung [Barovia](../Orte/Barovia) aufgebrochen sind. Auf dem Weg treffen Sie auf 4 Abenteurer die der Gruppe Schutz anbietet. Das Angebot wird aber von der Gruppe abgelehnt. Etwas später trifft die Gruppe auf 6 von Tannennadeln überzogenen Gestalten. Nachdem diese Gestalten die Gruppe fast ausgelöscht hat kommt eine Gruppe Wölfe welche die Gestalten zerfleischt. Weiter auf dem Weg findet die Gruppe ein Bündel mit Kleidung welche, sehr wahrscheinlich, einem Werwesen gehört. Kurz vor der Stadtgrenze kommt ihnen ein Skelettreiter entgegen, dieser ignoriert aber die Gruppe und reitet davon. Nach langer Reise erreicht die Gruppe die Stadttore von Barovia. In der Stadt angekommen teilt sich die Gruppe auf und ein Teil betritt ein, dem Anschein nach, Gasthaus. Dort treffen Sie auf [Ismark](../NPCs/Barovia#Ismark%20Koljanovitsch) der Ihnen von der [Geschichte Barovias](Strath%20von%20Zarowitsch.md) erzählt. Die Gruppe entscheidet sich die Nacht in der Taverne zu verbringen.
 
 **Tag 2**
-Am nächsten Morgen geht die Gruppe gemeinsam mit Ismark zum Haus des Bürgermeisters und treffen auf Irena und den, von vor 3 Tagen verstorbenen Bürgermeister.  Irena bittet die Gruppe ihrem Vater die letzte Ehre zu erweisen. Dafür wird er in seinem Sarg zur Kirche getragen. 
+Am nächsten Morgen geht die Gruppe gemeinsam mit Ismark zum Haus des Bürgermeisters und treffen auf Irena und den, von vor 3 Tagen verstorbenen Bürgermeister.  Irena bittet die Gruppe ihrem Vater die letzte Ehre zu erweisen. Dafür wird er in seinem Sarg zur Kirche getragen. In der Kirche, unter den Bodendielen ist ein Vampir gefangen der hungrig nach Blut ruft. Donovitsch, der Priester, erzählt, dass es sein Sohn ist der vor kurzem Strath in seiner Villa gemeinsam mit anderen angegriffen hat und als einziger zurück gekommen ist, wenn auch als Vampir. Sie erfahren auch das die Beerdigung des Bürgermeisters am morgen des nächsten Tages stattfinden kann.
