Finished Tagbuch für Session3

--- a/Tagebuch/2024-11-17.md
+++ b/Tagebuch/2024-11-17.md
@@ -13,7 +13,8 @@ Auf dem Weg zur Mühle trifft die Gruppe auf einen verwundeten Minotaurus - `Har
 1 leichte Armbrust und alle Bolzen erhält `Keira`.
 
 #### (Tag 6) - Keine Traumpasteten für uns
-Gruppe gerät in der Mühle in einem Kampf mit Morganta und ihren Töchtern Ophalia und Bella. Nach langem Bemühen schaffen es die Abenteurer die Hexen zu besiegen. ***(900 Exp pro Person)***
+`Caedis` und `Thala`stürmen in die Windmühle voraus. Die Gruppe folgt ihnen schließlich und sie entdecken Kinderknochen verstreut am Boden. Vor Wut stößt `Caedis`den Topf um als Morganta gackernd die Treppe runter schreitet. 
+Die Gruppe gerät in der Mühle in einem Kampf mit Morganta und ihren Töchtern Ophalia und Bella. Nach langem Bemühen schaffen es die Abenteurer die Hexen zu besiegen. ***(900 Exp pro Person)***
 Während des Kampfes wurden folgende Items verwendet:
 - 2 Heiltränke von `Keira` (Keira trinkt selber in der 2.Runde, Harkal trinkt,)
 - 1 Ölflasche von `Keira`
@@ -23,7 +24,9 @@ Während des Kampfes wurden folgende Items verwendet:
 
 `Keira` gönnt sich das **Jugend-Elixier** ins Inventar. `Harkal`nimmt das Elixier **Gelächter**. Es gäbe noch den Trank **Muttermilch**.
 
-Während `Lyndon`und `Ireena`noch bewusstlos sind, geraten die übrigen Mitglieder in einen weiteren Kampf mit Kinderzombies im obersten Stockwerk. Die Kinder fügen der Gruppe schwere Verletzungen zu, doch letzendlich konnte die Gruppe doch triumphieren. Dieser Kampf hat die Moral der Gruppe schwerst gesunken und sie beschließen für den heutigen eine lange Rast einzulegen, bis sich jeder wieder vollständig erholt hat. ***(100 Exp pro Perseon)***
+Während `Lyndon`und `Ireena`noch bewusstlos sind, geraten die übrigen Mitglieder in einen weiteren Kampf.
+Im obersten Stockwerk nähert sich `Caedis`ohne Argwohn Kindern, die sich in Schränken befinden und öffnet die Türen. 
+Kinderzombies fallen über die Abenteurer her und sie fügen der Gruppe schwere Verletzungen zu, doch letzendlich konnte die Gruppe doch triumphieren. Dieser Kampf hat die Moral der Gruppe schwerst gesunken und sie beschließen für den heutigen Tag eine lange Rast einzulegen, bis sich jeder wieder vollständig erholt hat. ***(100 Exp pro Perseon)***
 Während des Kampfes wurden folgende Items verwendet:
 - 2 Healing Kit von `Caedis` (Harkal stabilisert Caedies, Caedis stabilisert Thoradin)
 - 3 Heiltränke von `Keira` (Heiltrank für Keira, Heiltrank für Caedis, Heiltrank für Harkal)
