--- a/Tagebuch/2024-12-04.md
+++ b/Tagebuch/2024-12-04.md
@@ -1,4 +1,4 @@
-#### Nacht ? - Ein zarter Biss
+#### Nacht 8 - Ein zarter Biss
 Der Kampf von letztens wird weitergeführt. Zusätzlich zu den widerwärtigen Zombiekindern tauchen dank donnernden Fähigkeiten tauchen nun auch Werwölfe auf. Als wäre alles noch nicht schön genug, kommt auch noch eine Vampirbrut und ein Necromancer hinzu. 
 
 Biss für Biss zieht sich der Fluch der Lykanthropie durch die Gruppe. Die Lage scheint hoffnungslos. Nur noch Caedis und Keira stellen sich dem Fluch entgegen. Alle anderen Teilnehmer, inklusive Ireena, erliegen ihrem neuen haarigen Schicksal. \ wolf pack /   
@@ -23,7 +23,7 @@ Das Rudel unterliegt einer schweren Erschöpfung und schläft ein.
 
 Lyndon wacht inmitten der Nacht desorientiert und zerschlagen auf. Der Halbling heilt sich selber mit Magie. Mithilfe seiner Handwerkskunst und Tools improvisiert er sich einen Unterschlupf im Baum und gönnt sich einen wohlverdienten langen Schlafen. (8h) - Lyndon hat 1 Exhaustion. 
 
-#### Tag ? Wartezeit und Plündern
+#### Tag 9 Wartezeit und Plündern
 Die Wölfe rennen währendessen herum ...Lyndon plündernt nach einem netten Schlaf den Necromancer.
 - Zauberbuch des Todesflüsterns
 - Pulsierende antike verrottete Seelenrune - Long Rest mit Rune -> einmal pro Tag 1 Minute Dienstschatten herbeirufen - irgendwas ist jedoch komisch
@@ -39,10 +39,10 @@ Lyndon geht weiter zur Vampirbrut. Er gönnt sich eine seidene Robe. (Mantel des
 - Fangzähne (für nekrotisches Gift, 1d6 nekrotischen Schaden) extrahiert mit einer Expertise und Präzision die einem Kieferchirurg eben ist, Alchemist notwendig
 - Silberring (5 Goldmünzen)
 
-##### Nacht ? 
+##### Nacht 9 
 Lyndon übersteht eine weitere Nacht, sowie die Wölfe. 
 
-##### Tag ? 
+##### Tag 10 
 Der Habling folgt den Wolfspuren und findet seine sehr blutverschmierten und verstörrten Kumpagnen, nicht mehr in Wolfsform wieder. Bis auf Keira, die aus irgendeinem Grund, blitzsauber ist. 
 Die Abenteurer verschlingen ihre Ration. (-1 Ration)
 Die Gruppe befindet sich derzeit in den Wäldern nahe Old Mill. Irgendwo zwischen Old Mill und Luna River.
@@ -54,6 +54,6 @@ Thoradin wird vom Zauberbruch fertig gemacht. Folgende Zaubersprüche sind darin
 - Ray of Enfeeblement
 
 -------
-Stab der Furch ist jetzt +6 gerade - ( max 7 charges, also max charges aktuell), da er beim vorigen Einsetzen nicht zerbrochen ist. 
+Stab der Furcht ist jetzt +6 gerade - ( max 7 charges, also max charges aktuell), da er beim vorigen Einsetzen nicht zerbrochen ist. 
 
 AUF NACH VALLAKI! Ohne weitere Probleme erreicht die Gruppe erschöpft die Stadt. 
