Tagebuch Experience added 09.02.2025

--- a/Tagebuch/2025-02-09.md
+++ b/Tagebuch/2025-02-09.md
@@ -8,7 +8,8 @@ Priester:
 
 Die Gruppe macht sich auf zu den Laden des Sargmachers. Das Geschäft ist verschlossen. Ein Teil der Gruppe bleibt zurück um den Sargmacher zu beschatten, der Rest besucht den Totengräber. 
 
-Nach Befragung des Totengräbers, beschließt die Guppe in das Haus des Sargmachers einzubrechen. Finden Gebeine, Vampirbrut greift an.
+Nach Befragung des Totengräbers, beschließt die Guppe in das Haus des Sargmachers einzubrechen. Finden Gebeine, Vampirbrut greift an. Gruppe wird überwältigt, aber schafft es 2(?) der Vampirbrut zu erledigen. Jeder erhält 600 + 600 Erfahrung; 
+Insgesamt 5962 Erfahrung jetzt; Machen sich auf in die Taverne.
 
 
 **Tag 16**
